add module folder

--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
           <nav class="nav-head">
               <h2>Awesome Books</h2>
               <ul class="nav-item">
-                  <li class="nav-link"><a onclick="showBookList()" href="#">List</a></li>
-                  <li class="nav-link"><a onclick="showForm()" href="#">Add new</a></li>
-                  <li class="nav-link"><a onclick="showContact()" href="#">Contact</a></li>
+                  <li id="n1" class="nav-link" href="#">List</a></li>
+                  <li id="n2" class="nav-link" href="#">Add new</a></li>
+                  <li id="n3" class="nav-link" href="#">Contact</a></li>
               </ul>
           </nav>
       </header>
